# pollen-forecast

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  analysis_of_pollen_level.ipynb  communes_de_france.ipynb  docker-compose.yml  download_data.ipynb  download_history.py  entrypoint.migrate.sh  entrypoint.sh  georef-france-commune.csv  impact_graminees_2023.csv  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
data/: daily_mean_pollen_2023.csv  georef-france-commune.csv  impact_graminees_2023.csv  prefectures.csv
notebooks/: analysis_of_pollen_level.ipynb  base-pop-historiques2021.csv  communes_de_france.ipynb  deparements.ipynb  download_data.ipynb  georef-france-commune.csv
server/: custom.js
src/pollen_forecast/: Météo_pollen.py  __about__.py  __init__.py  app.py  cities.py  copernicus.py  main.py  pannel_app.py  pollen.py  streamlit_app.py  taipy_app.py
src/pollen_forecast/djangoserver/: manage.py
src/pollen_forecast/djangoserver/cityforecast/: api.py  apps.py  geo.py  models.py  tasks.py  urls.py  views.py
src/pollen_forecast/djangoserver/cityforecast/migrations/: 0001_initial.py  0002_pollenconcentrationforecasted.py  0003_pollenconcentrationforecasted_cityforecas_citynam_e154ca_idx.py  0004_departements.py  0005_remove_pollenconcentrationforecasted_cityforecas_citynam_e154ca_idx_and_more.py  0006_departements_geometry_type_and_more.py  0007_city_is_sous_prefecture_city_population_and_more.py  0008_pollenconcentrationhistory.py  0009_add_similarity.py  0010_city_location.py
src/pollen_forecast/djangoserver/cityforecast/static/cityforecast/scripts/: history.js  map.js  meteoville.js
src/pollen_forecast/djangoserver/cityforecast/templates/cityforecast/: about.html  history.html  map.html  meteoville.html
src/pollen_forecast/djangoserver/meteopollen/: asgi.py  settings.py  urls.py  wsgi.py
src/pollen_forecast/djangoserver/meteopollen/settings/: base.py  dev.py  prod.py
src/pollen_forecast/djangoserver/scripts/: fetch_one_day.py  upload_history.py
src/pollen_forecast/djangoserver/templates/: base.html
src/pollen_forecast/djangoserver/tests/: test_tasks.py
src/pollen_forecast/pages/: a_propos.py
tests/: __init__.py
