[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pollen-forecast"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Antoine TAVANT", email = "antoine.tavant@ecoco2.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "cdsapi",
  "xarray",
  "netCDF4",
  "matplotlib",
  "nicegui",
]

[project.urls]
Documentation = "https://github.com/Antoine TAVANT/pollen-forecast#readme"
Issues = "https://github.com/Antoine TAVANT/pollen-forecast/issues"
Source = "https://github.com/Antoine TAVANT/pollen-forecast"

[tool.hatch.version]
path = "src/pollen_forecast/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pollen_forecast tests}"

[tool.coverage.run]
source_pkgs = ["pollen_forecast", "tests"]
branch = true
parallel = true
omit = [
  "src/pollen_forecast/__about__.py",
]

[tool.coverage.paths]
pollen_forecast = ["src/pollen_forecast", "*/pollen-forecast/src/pollen_forecast"]
tests = ["tests", "*/pollen-forecast/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
